refactor: alter index.html

--- a/index.html
+++ b/index.html
@@ -1,45 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Cabeçalho</h1>
-    <p>
-      <b> Lorem</b> <strong>ipsum</strong> <i>dolor</i> <em>sit</em>
 
-      <a
-        href="https://www.politize.com.br/participacao-feminina-politica/?https://www.politize.com.br/&gclid=CjwKCAiAk--dBhABEiwAchIwkSe02vh9jf8GnA67n3Xl7hIHe7_8ybj4w97V9UOYnBtIBspUIf_3MRoCn8QQAvD_BwE"
-        target="blank"
-        >amet</a
-      >
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
 
-      <q
-        ><img
-          class="img-in-text"
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Rose-Sanderson-Votes-for-Women.jpeg/799px-Rose-Sanderson-Votes-for-Women.jpeg?20090419064039"
-          alt="mulheres feministas"
-          widht="200"
-          height="100"
-        />
-      </q>
-      consectetur adipisicing elit.
-      <ins>Dolorum</ins> ex unde <s>quibusdam</s> suscipit, 2<sup>2</sup>dolore
-      nobis voluptate omnis, repellat vitae incidunt minus dicta fugit, officia
-      nihil. Incidunt, dolore voluptas. <small>Voluptatum</small>, modi?
-    </p>
-    <br />
-    <q>H<sub>2</sub>O</q>
+<body>
+  <h1>Cabeçalho</h1>
+  <p>
+    <b> Lorem</b> <strong>ipsum</strong> <i>dolor</i> <em>sit</em>
 
-    <blockquote>Aqui sim estou fazendo um bloco de citação.</blockquote>
+    <a href="https://www.politize.com.br/participacao-feminina-politica/?https://www.politize.com.br/&gclid=CjwKCAiAk--dBhABEiwAchIwkSe02vh9jf8GnA67n3Xl7hIHe7_8ybj4w97V9UOYnBtIBspUIf_3MRoCn8QQAvD_BwE"
+      target="blank">amet</a>
 
-    <div class="red">Victor Cesar de Andrade</div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis libero
-      soluta eum perferendis odit dolore nobis iure. Culpa, harum nesciunt?
-    </p>
-  </body>
+    <q><img class="img-in-text"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c5/Rose-Sanderson-Votes-for-Women.jpeg/799px-Rose-Sanderson-Votes-for-Women.jpeg?20090419064039"
+        alt="mulheres feministas" widht="200" height="100" />
+    </q>
+    consectetur adipisicing elit.
+    <ins>Dolorum</ins> ex unde <s>quibusdam</s> suscipit, 2<sup>2</sup>dolore
+    nobis voluptate omnis, repellat vitae incidunt minus dicta fugit, officia
+    nihil. Incidunt, dolore voluptas. <small>Voluptatum</small>, modi?
+  </p>
+  <br />
+  <q>H<sub>2</sub>O</q>
+
+  <blockquote>Aqui sim estou fazendo um bloco de citação.</blockquote>
+
+  <div class="red">Victor Cesar de Andrade Atualização</div>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis libero
+    soluta eum perferendis odit dolore nobis iure. Culpa, harum nesciunt?
+  </p>
+</body>
+
 </html>
