--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <ins>Dolorum</ins> ex unde <s>quibusdam</s> suscipit, 2<sup>2</sup>dolore
     nobis voluptate omnis, repellat vitae incidunt minus dicta fugit, officia
     nihil. Incidunt, dolore voluptas. <small>Voluptatum</small>, modi?
+
+    Hoje realizei um teste no Git, fiz uma alteração no terminal e depois atualizei para o GitHub
   </p>
   <br />
   <q>H<sub>2</sub>O</q>
