--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis libero
     soluta eum perferendis odit dolore nobis iure. Culpa, harum nesciunt?
   </p>
+  <style>
+    .section-one {
+      width: 200px;
+      background: deeppink;
+      border: 5px solid black;
+      padding: 15px;
+    }
+
+    .section-two {
+      width: 200px;
+      background: cyan;
+      border: 5px solid black;
+      padding: 15px;
+    }
+  </style>
+</body>
+
+<body>
+
+
+  <section class="section-one">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum reiciendis velit ducimus
+    nobis enim cumque nihil incidunt provident quos, iste inventore vitae tempore commodi autem repellat cum libero
+    laudantium itaque.</section>
+  <section class="section-two">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis corrupti officiis
+    officia, maxime sequi quo itaque quisquam repudiandae optio magni nobis ipsam voluptate corporis incidunt totam,
+    ducimus quos necessitatibus cumque.</section>
 </body>
 
 </html>
