--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <style>
     .section-one {
       width: 200px;
+      height: 150px;
       background: deeppink;
       border: 5px solid black;
       padding: 15px;
